Set `z-index` for `.toolbar-left` to ensure proper layering

--- a/src/app/shared/components/action-toolbar/action-toolbar.component.scss
+++ b/src/app/shared/components/action-toolbar/action-toolbar.component.scss
@@ -17,6 +17,7 @@
 
   .toolbar-left {
     min-width: 0;
+    z-index: 1;
   }
 
   .toolbar-center {
